src/objects/Service_Operations_Chat_Reasons__mdt.object
<CustomObject>
    <description>The prechat form picklist values for chat reason that map to the case reason.</description>
    <fields>
        <fullName>Chat_Button__c</fullName>
        <label>Chat Button</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Other_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Other Reason</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Operations Chat Reasons</label>
    <pluralLabel>Service Operations Chat Reasons</pluralLabel>
</CustomObject>